コメント取得専用のAPI作成。作成に伴い、意見取得APIのレスポンスからはコメント排除
